--- a/jsAnalysis/index.html
+++ b/jsAnalysis/index.html
@@ -2,40 +2,60 @@
 <html lang="en">
 
 <head>
-  <!--[if IE]>
+    <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <![endif]-->
-  <meta charset="utf-8" />
-  <title>JavaScript Text analysis</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/demo.css" />
+    <meta charset="utf-8" />
+    <title>JavaScript Text analysis</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/demo.css" />
 </head>
 
 <body>
-  <h1>JavaScript hasher</h1>
-  <script src="js/md5.js"></script>
-  <form>
-    <p>
-      <label for="input">Input</label>
-      <textarea rows="6" id="input"></textarea>
-    </p>
-    <p>
-      <button type="submit" id="calculate" onclick="
-            result1.value=md5(input.value);
-            result2.value=input.value.split('').sort().join('');
-            stats.value = JSON.stringify({
-              'inputLength': input.value.length
-            });
+    <h1>JavaScript hasher</h1>
+    <script src="js/md5.js"></script>
+    <script src="index.js"></script>
+    <form>
+        <p>
+            <label for="input">Input</label>
+            <textarea rows="6" id="input"></textarea>
+        </p>
+        <p>
+            <button type="submit" id="calculate" onclick="
+            let hashes = computeHashes(input.value);
+            length.value = hashes.length;
+            sortedLetters.value = hashes.sortedLetters;
+            md5.value = hashes.md5;
+            binnedLettersCompressed.innerHTML = JSONSyntaxHighlight(hashes.binnedLettersCompressed);
+            stats.innerHTML = JSONSyntaxHighlight(hashes);
             return false">Calculate</button>
-      <button type="reset" id="reset">Reset</button>
-    </p>
-    <p>
-      <label for="result1">Result</label>
-      <input id="result1" readonly />
-      <input id="result2" readonly />
-
-      <textarea rows="3" id="stats"></textarea>
-    </p>
-  </form>
+            <button type="reset" id="reset">Reset</button>
+        </p>
+        <p>
+        <table style="width: 100%;">
+            <tr>
+                <td>Length</td>
+                <td><input type="text" id="length" readonly /></td>
+                <td>Sorted letters</td>
+                <td><input type="text" id="sortedLetters" readonly /></td>
+            </tr>
+            <tr>
+                <td>MD5</td>
+                <td><input type="text" id="md5" readonly /></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>binnedLettersCompressed</td>
+                <td colspan="3"><pre id="binnedLettersCompressed" ></pre></td>
+            </tr>
+            <tr>
+                <td>Stats</td>
+                <td colspan="3" ><pre id="stats" style="width: 100%;"></pre></td>
+            </tr>
+        </table>
+        </p>
+    </form>
 </body>
+
 </html>
