tried permutations. too slow

--- a/jsAnalysis/index.html
+++ b/jsAnalysis/index.html
@@ -72,17 +72,17 @@
     (function($) {
         onSubmit(null);
 
-        $('#sortedLetters').on('click', function() {
-            let hashes = JSON.parse($('#input').attr('data-hashes'));
-            $('#input').val(hashes.sortedLetters);
-            onSubmit(null);
-        });
+        // $('#sortedLetters').on('click', function() {
+        //     let hashes = JSON.parse($('#input').attr('data-hashes'));
+        //     $('#input').val(hashes.sortedLetters);
+        //     onSubmit(null);
+        // });
 
-        $('#binnedLettersCompressed').on('click', function() {
-            let hashes = JSON.parse($('#input').attr('data-hashes'));
-            $('#input').val(hashes.binnedLettersCompressed.text);
-            onSubmit(null);
-        });
+        // $('#binnedLettersCompressed').on('click', function() {
+        //     let hashes = JSON.parse($('#input').attr('data-hashes'));
+        //     $('#input').val(hashes.binnedLettersCompressed.text);
+        //     onSubmit(null);
+        // });
     })(jQuery);
     </script>
 </body>
